Use List.of() instead of Collections.unmodifiableList(Arrays.asList()) in BooleanQuery